--- a/frontend/resources/styles/main/partials/sidebar.scss
+++ b/frontend/resources/styles/main/partials/sidebar.scss
@@ -113,6 +113,43 @@
           }
         }
       }
+
+      & .focus-title {
+        width: 100%;
+        height: 100%;
+        display: grid;
+        grid-template-columns: auto 1fr auto;
+        grid-column-gap: 8px;
+
+        & .back-button {
+          cursor: pointer;
+          background: none;
+          border: none;
+          transform: rotate(180deg);
+          padding: 0;
+
+          &:hover {
+            svg {
+              fill: $color-primary;
+            }
+          }
+
+          & svg {
+            fill: $color-white;
+          }
+        }
+
+        & .focus-mode {
+          color: $color-primary;
+          border: 1px solid $color-primary;
+          border-radius: 3px;
+          font-size: 10px;
+          text-transform: uppercase;
+          padding: 0px 4px;
+          display: flex;
+          align-items: center;
+        }
+      }
     }
 
     .assets-bar .tool-window {
